# chess

Sources/Main/: CMakeLists.txt  main.cpp
Sources/Main/Figures/: BaseFigure.cpp  BaseFigure.hpp  Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Sources/Main/headers/: BaseEntity.hpp  BaseFigure.hpp  Map.hpp  Pawn.hpp
Sources/Main/src/: Backlight.cpp  Backlight.h  BaseCell.cpp  BaseCell.hpp  BaseEntity.cpp  BaseEntity.hpp  BaseFigure.cpp  BaseFigure.hpp  BaseInputManager.cpp  BaseInputManager.h  Cell.cpp  Cell.h  Constants.hpp  Coord.h  EntityFactory.cpp  EntityFactory.h  FigureFactory.cpp  FigureFactory.h  Game.cpp  Game.hpp  Highlight.cpp  Highlight.h  InputManager.cpp  InputManager.h  Logger.cpp  Logger.h  Map.cpp  Map.h  Map.hpp  Pawn.cpp  Pawn.hpp  Player.cpp  Player.h  Renderer.cpp  Renderer.h  TextInputManager.cpp  TextInputManager.h
